test/asm/segclash.asm
; Test clashing segment properties

	IDEAL

	; defaulting to private

	SEGMENT	SEG1
	ENDS
	SEGMENT	SEG1 PUBLIC
	ENDS
	SEGMENT	SEG1 STACK
	ENDS
	SEGMENT	SEG1 PRIVATE
	ENDS
	SEGMENT	SEG1
	ENDS

	; explicitly private

	SEGMENT SEG2 PRIVATE
	ENDS
	SEGMENT SEG2 PUBLIC
	ENDS
	SEGMENT	SEG2 STACK
	ENDS
	SEGMENT SEG2 PRIVATE
	ENDS
	SEGMENT SEG2
	ENDS
	
	; public

	SEGMENT SEG3 PUBLIC
	ENDS
	SEGMENT SEG3 PRIVATE
	ENDS
	SEGMENT	SEG3 STACK
	ENDS
	SEGMENT SEG3 PUBLIC
	ENDS
	SEGMENT SEG3
	ENDS
	
	; stack

	SEGMENT SEG4 STACK
	ENDS
	SEGMENT SEG4 PRIVATE
	ENDS
	SEGMENT SEG4 PUBLIC
	ENDS
	SEGMENT	SEG4 STACK
	ENDS
	SEGMENT SEG4
	ENDS
	

	END
